# got-wic

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml
docs/guide/: index.html
docs/plans/: 2026-03-12-sow-optimizer-design.md  2026-03-12-sow-optimizer-impl.md  2026-03-12-sow-optimizer-impl.md.tasks.json  2026-03-12-stochastic-combat-design.md  2026-03-12-stochastic-combat-impl.md  2026-03-12-stochastic-combat-impl.md.tasks.json
notebooks/: hello.py  sow-7th-ann-se.py
notebooks/__marimo__/session/: sow-7th-ann-se.py.json
src/got_wic/: __init__.py  combat.py  model.py  montecarlo.py  opponent.py  optimize.py  simulate.py
tests/: test_combat.py  test_integration.py  test_model.py  test_montecarlo.py  test_opponent.py  test_optimize.py  test_simulate.py
