[project]
name = "got-wic"
version = "0.1.0"
description = "Game of Thrones: Winter is Coming — strategy simulators and analysis notebooks"
requires-python = ">=3.13"
dependencies = [
    "marimo>=0.20.4",
    "numpy>=2.4.3",
]

[tool.uv]
default-groups = ["dev"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/got_wic"]

[dependency-groups]
dev = [
    "ruff>=0.15.5",
    "ty>=0.0.21",
]
